feat: add some search option and change connecting flights response